--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "vue": "^2.6.10",
     "vue-headful": "^2.0.1",
     "vue-router": "^3.0.1",
-    "vuex": "^3.1.1"
+    "vuex": "^3.1.1",
+    "xml-js": "^1.6.11"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.2",
