--- a/package.json
+++ b/package.json
@@ -13,13 +13,22 @@
     "axios": "^0.19.0",
     "bootstrap": "^4.0.0-beta.2",
     "bootstrap-vue": "latest",
+    "child_process": "^1.0.2",
+    "fs": "0.0.1-security",
+    "isomorphic-ws": "^4.0.1",
     "jquery": "^3.4.1",
+    "net": "^1.0.2",
     "popper.js": "^1.12.9",
     "prerender-spa-plugin": "^3.4.0",
+    "readline": "^1.3.0",
+    "simpleddp": "^2.2.4",
+    "simpleddp-plugin-login": "^4.0.2",
+    "tls": "0.0.1",
     "vue": "^2.6.10",
     "vue-headful": "^2.0.1",
     "vue-router": "^3.0.1",
     "vuex": "^3.1.1",
+    "ws": "^7.2.0",
     "xml-js": "^1.6.11"
   },
   "devDependencies": {
