--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "axios": "^0.19.0",
     "bootstrap": "^4.0.0-beta.2",
     "bootstrap-vue": "latest",
+    "isomorphic-ws": "^4.0.1",
     "jquery": "^3.4.1",
     "popper.js": "^1.12.9",
     "prerender-spa-plugin": "^3.4.0",
@@ -21,6 +22,7 @@
     "vue-headful": "^2.0.1",
     "vue-router": "^3.0.1",
     "vuex": "^3.1.1",
+    "ws": "^7.2.0",
     "xml-js": "^1.6.11"
   },
   "devDependencies": {
