--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "popper.js": "^1.12.9",
     "prerender-spa-plugin": "^3.4.0",
     "simpleddp": "^2.2.4",
+    "simpleddp-plugin-login": "^4.0.2",
     "vue": "^2.6.10",
     "vue-headful": "^2.0.1",
     "vue-router": "^3.0.1",
