--- a/package.json
+++ b/package.json
@@ -12,17 +12,17 @@
   "dependencies": {
     "axios": "^0.19.0",
     "bootstrap": "^4.0.0-beta.2",
-    "bootstrap-vue": "latest",
+    "bootstrap-vue": "^2.1.0",
     "isomorphic-ws": "^4.0.1",
     "jquery": "^3.4.1",
-    "popper.js": "^1.12.9",
+    "popper.js": "^1.16.0",
     "prerender-spa-plugin": "^3.4.0",
     "simpleddp": "^2.2.4",
     "simpleddp-plugin-login": "^4.0.2",
     "vue": "^2.6.10",
     "vue-headful": "^2.0.1",
-    "vue-router": "^3.0.1",
-    "vuex": "^3.1.1",
+    "vue-router": "^3.1.3",
+    "vuex": "^3.1.2",
     "ws": "^7.2.0",
     "xml-js": "^1.6.11"
   },
@@ -40,19 +40,19 @@
     "css-loader": "^0.28.0",
     "cssnano": "^3.10.0",
     "eventsource-polyfill": "^0.9.6",
-    "express": "^4.14.1",
+    "express": "^4.17.1",
     "extract-text-webpack-plugin": "^2.0.0",
     "file-loader": "^0.11.1",
     "friendly-errors-webpack-plugin": "^1.1.3",
     "html-webpack-plugin": "^2.28.0",
     "http-proxy-middleware": "^0.19.1",
-    "node-sass": "^4.12.0",
+    "node-sass": "^4.13.0",
     "opn": "^5.1.0",
     "optimize-css-assets-webpack-plugin": "^2.0.0",
     "ora": "^1.2.0",
-    "rimraf": "^2.6.0",
-    "sass-loader": "^7.1.0",
-    "semver": "^5.3.0",
+    "rimraf": "^2.7.1",
+    "sass-loader": "^7.3.1",
+    "semver": "^5.7.1",
     "shelljs": "^0.7.6",
     "url-loader": "^0.5.8",
     "vue-loader": "^13.0.4",
@@ -61,8 +61,8 @@
     "webpack": "^2.7.0",
     "webpack-bundle-analyzer": "^2.2.1",
     "webpack-dev-middleware": "^1.10.0",
-    "webpack-hot-middleware": "^2.18.0",
-    "webpack-merge": "^4.1.0"
+    "webpack-hot-middleware": "^2.25.0",
+    "webpack-merge": "^4.2.2"
   },
   "engines": {
     "node": ">= 4.0.0",
