--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "sass-loader": "^7.3.1",
     "semver": "^5.7.1",
     "shelljs": "^0.7.6",
+    "uglifyjs-webpack-plugin": "^1.3.0",
     "url-loader": "^0.5.8",
     "vue-loader": "^13.0.4",
     "vue-style-loader": "^3.0.1",
