--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "vue": "^2.6.10",
     "vue-headful": "^2.0.1",
     "vue-router": "^3.1.3",
+    "vue-simpleddp": "0.0.6-3",
     "vuex": "^3.1.2",
     "ws": "^7.2.0",
     "xml-js": "^1.6.11"
