--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "prerender-spa-plugin": "^3.4.0",
     "simpleddp": "^2.2.4",
     "simpleddp-plugin-login": "^4.0.2",
+    "v-suggestions": "^1.1.1",
     "vue": "^2.6.10",
     "vue-headful": "^2.0.1",
     "vue-router": "^3.1.3",
