--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "simpleddp-plugin-login": "^4.0.2",
     "v-suggestions": "^1.1.1",
     "vue": "^2.6.10",
+    "vue-cookie-law": "^1.11.0",
     "vue-headful": "^2.0.1",
     "vue-router": "^3.1.3",
     "vue-simpleddp": "0.0.6-3",
