--- a/package.json
+++ b/package.json
@@ -15,10 +15,12 @@
     "bootstrap-vue": "^2.1.0",
     "isomorphic-ws": "^4.0.1",
     "jquery": "^3.4.1",
+    "moment": "^2.25.3",
     "popper.js": "^1.16.0",
     "prerender-spa-plugin": "^3.4.0",
     "simpleddp": "^2.2.4",
     "simpleddp-plugin-login": "^4.0.2",
+    "v-calendar": "^1.0.6",
     "v-suggestions": "^1.1.1",
     "vue": "^2.6.10",
     "vue-cookie-law": "^1.11.0",
@@ -27,6 +29,7 @@
     "vue-router": "^3.1.3",
     "vue-simpleddp": "0.0.6-3",
     "vue-tel-input": "^4.0.0",
+    "vue2-timepicker": "^1.0.8",
     "vuex": "^3.1.2",
     "ws": "^7.2.0",
     "xml-js": "^1.6.11"
