--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "vue-cookie-law": "^1.11.0",
     "vue-headful": "^2.0.1",
     "vue-mailchimp-subscribe": "^1.1.0",
+    "vue-moment": "^4.1.0",
     "vue-router": "^3.1.3",
     "vue-simpleddp": "0.0.6-3",
     "vue-tel-input": "^4.0.0",
