--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,4 +1,4 @@
 {
-    "eslint.autoFixOnSave": false,
-    "editor.formatOnSave": false
+    "eslint.autoFixOnSave": true,
+    "editor.formatOnSave": true
 }
