--- a/package.json
+++ b/package.json
@@ -11,8 +11,8 @@
   },
   "dependencies": {
     "axios": "^0.19.0",
-    "bootstrap": "^4.0.0-beta.2",
-    "bootstrap-vue": "^2.1.0",
+    "bootstrap": "^4.5.0",
+    "bootstrap-vue": "^2.15.0",
     "isomorphic-ws": "^4.0.1",
     "jquery": "^3.4.1",
     "moment": "^2.25.3",
