--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "vue-range-component": "^1.0.3",
     "vue-range-slider": "^0.6.0",
     "vue-router": "^3.4.9",
+    "vue-simple-range-slider": "^0.1.10",
     "vue-simpleddp": "0.0.6-3",
     "vue-slider-component": "^4.0.0-beta.3",
     "vue-tel-input": "^4.4.2",
