--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "v-suggestions": "^1.1.1",
     "vue": "^2.6.12",
     "vue-cookie-accept-decline": "^5.4.0",
+    "vue-custom-range-slider": "^0.2.3",
     "vue-headful": "^2.1.0",
     "vue-mailchimp-subscribe": "^1.1.0",
     "vue-moment": "^4.1.0",
