--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "vue-headful": "^2.1.0",
     "vue-mailchimp-subscribe": "^1.1.0",
     "vue-moment": "^4.1.0",
+    "vue-nprogress": "^0.2.0",
     "vue-range-component": "^1.0.3",
     "vue-range-slider": "^0.6.0",
     "vue-router": "^3.4.9",
