add example test

--- a/netlify.toml
+++ b/netlify.toml
@@ -3,3 +3,8 @@
   for = "/*"
     [headers.values]
     Access-Control-Allow-Origin = "*"
+
+[[plugins]]
+package = "netlify-plugin-jest"
+
+  [plugins.inputs]
