add image gallery for results page

--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "vue-cookie-accept-decline": "^5.4.0",
     "vue-custom-range-slider": "^0.2.3",
     "vue-headful": "^2.1.0",
+    "vue-light-gallery": "^1.0.1",
     "vue-mailchimp-subscribe": "^1.1.0",
     "vue-moment": "^4.1.0",
     "vue-nprogress": "^0.2.0",
