--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "vue": "^2.6.12",
     "vue-cookie-accept-decline": "^5.4.0",
     "vue-custom-range-slider": "^0.2.3",
+    "vue-ellipse-progress": "^1.3.0",
     "vue-headful": "^2.1.0",
     "vue-light-gallery": "^1.0.1",
     "vue-mailchimp-subscribe": "^1.1.0",
