--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "isomorphic-ws": "^4.0.1",
     "jquery": "^3.6.0",
     "moment": "^2.25.3",
+    "node-sass": "npm:sass@^1.43.5",
     "popper.js": "^1.16.1",
     "portal-vue": "^2.1.7",
     "prerender-spa-plugin": "^3.4.0",
@@ -73,7 +74,6 @@
     "html-webpack-plugin": "^2.28.0",
     "http-proxy-middleware": "^0.19.2",
     "jest": "^23.6.0",
-    "node-sass": "^4.14.1",
     "opn": "^5.1.0",
     "optimize-css-assets-webpack-plugin": "^2.0.0",
     "ora": "^1.2.0",
